Fix media pop-up layout issue in older browsers

--- a/pari/static/css/base.less
+++ b/pari/static/css/base.less
@@ -392,6 +392,7 @@ ul.nav li.dropdown:hover ul.dropdown-menu{
 }
 
 .media-popup {
+    overflow: hidden;
     @media(min-width: 979px){
         width: 800px;
         margin-left: 200px;
